use responsive linebreak

--- a/css/less/styles.less
+++ b/css/less/styles.less
@@ -18,6 +18,8 @@ body{
     transition: left 0.2s;
 }
 
+
+
 .header{
     position: fixed;
     top: 0;
@@ -28,7 +30,6 @@ body{
     width: 500px;
     color: #fefefe;
     padding: 0 30px;
-
 
     .name-title{
         width: 60%;
@@ -126,6 +127,10 @@ body{
     .content{
         padding: 16vh 30px 5vh 30px;
 
+        .responsive-line{
+            display: block;
+        }
+
         hr{
             border-color: #7D1A1D;
             margin-bottom: 30px;
@@ -222,6 +227,10 @@ body{
         min-width: 300px;
         .content{
             padding: 25vh 30px 5vh 30px;
+
+            .responsive-line{
+                display: inline;
+            }
 
             .tiny{
                 width: 75%;
