better support for mobile and retina displays

--- a/css/less/styles.less
+++ b/css/less/styles.less
@@ -190,6 +190,11 @@ body{
 }
 
 @media (max-width: 550px){
+
+    body{
+        background-repeat: repeat-y;
+    }
+
     .header{
         height: 155px;
         width: 90%;
@@ -225,8 +230,10 @@ body{
 
     .wrap{
         min-width: 300px;
+        width: 100%;
         .content{
             padding: 25vh 30px 5vh 30px;
+
 
             .responsive-line{
                 display: inline;
@@ -237,6 +244,12 @@ body{
             }
         }
     }
+}
 
-
+@media
+(-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 192dpi) {
+    .wrap .content {
+        padding-top: 35vh;
+    }
 }
