ditch vh's. added gitignore

--- a/css/less/styles.less
+++ b/css/less/styles.less
@@ -125,7 +125,7 @@ body{
     min-height: 100%;
 
     .content{
-        padding: 16vh 30px 5vh 30px;
+        padding: 125px 30px 5vh 30px;
 
         .responsive-line{
             display: block;
@@ -232,7 +232,7 @@ body{
         min-width: 300px;
         width: 100%;
         .content{
-            padding: 25vh 30px 5vh 30px;
+            padding: 170px 30px 5vh 30px;
 
 
             .responsive-line{
